tests/cases/fail/json_from_string_non_str_dict_key.p4
import json


def main() -> None:
    counts = json.from_string[dict[int, int]]("{\"1\":1}")
    print(counts)
